// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Array [
  <form
    action=""
  >
    <label
      htmlFor="Deepest note"
    >
      Deepest note : 
      <input
        onChange={[Function]}
        type="text"
        value="F1"
      />
    </label>
    <label
      htmlFor="Selected Chord"
    >
      Selected Chord : 
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </form>,
  <main>
    <ol>
      <li>
        <ol>
          <li>
            <aside>
              0
            </aside>
            <article>
              E4
            </article>
            <div />
          </li>
          <li>
            <aside>
              1
            </aside>
            <article>
              F4
            </article>
            <div />
          </li>
          <li>
            <aside>
              2
            </aside>
            <article>
              Gb4
            </article>
            <div />
          </li>
          <li>
            <aside>
              3
            </aside>
            <article>
              G4
            </article>
            <div />
          </li>
          <li>
            <aside>
              4
            </aside>
            <article>
              Ab4
            </article>
            <div />
          </li>
          <li>
            <aside>
              5
            </aside>
            <article>
              A4
            </article>
            <div />
          </li>
          <li>
            <aside>
              6
            </aside>
            <article>
              A#4
            </article>
            <div />
          </li>
          <li>
            <aside>
              7
            </aside>
            <article>
              B4
            </article>
            <div />
          </li>
          <li>
            <aside>
              8
            </aside>
            <article>
              C5
            </article>
            <div />
          </li>
          <li>
            <aside>
              9
            </aside>
            <article>
              Db5
            </article>
            <div />
          </li>
          <li>
            <aside>
              10
            </aside>
            <article>
              D5
            </article>
            <div />
          </li>
          <li>
            <aside>
              11
            </aside>
            <article>
              Eb5
            </article>
            <div />
          </li>
          <li>
            <aside>
              12
            </aside>
            <article>
              E5
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li>
            <aside>
              13
            </aside>
            <article>
              A3
            </article>
            <div />
          </li>
          <li>
            <aside>
              14
            </aside>
            <article>
              A#3
            </article>
            <div />
          </li>
          <li>
            <aside>
              15
            </aside>
            <article>
              B3
            </article>
            <div />
          </li>
          <li>
            <aside>
              16
            </aside>
            <article>
              C4
            </article>
            <div />
          </li>
          <li>
            <aside>
              17
            </aside>
            <article>
              Db4
            </article>
            <div />
          </li>
          <li>
            <aside>
              18
            </aside>
            <article>
              D4
            </article>
            <div />
          </li>
          <li>
            <aside>
              19
            </aside>
            <article>
              D#4
            </article>
            <div />
          </li>
          <li>
            <aside>
              20
            </aside>
            <article>
              E4
            </article>
            <div />
          </li>
          <li>
            <aside>
              21
            </aside>
            <article>
              F4
            </article>
            <div />
          </li>
          <li>
            <aside>
              22
            </aside>
            <article>
              Gb4
            </article>
            <div />
          </li>
          <li>
            <aside>
              23
            </aside>
            <article>
              G4
            </article>
            <div />
          </li>
          <li>
            <aside>
              24
            </aside>
            <article>
              Ab4
            </article>
            <div />
          </li>
          <li>
            <aside>
              25
            </aside>
            <article>
              A4
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li>
            <aside>
              26
            </aside>
            <article>
              D3
            </article>
            <div />
          </li>
          <li>
            <aside>
              27
            </aside>
            <article>
              D#3
            </article>
            <div />
          </li>
          <li>
            <aside>
              28
            </aside>
            <article>
              E3
            </article>
            <div />
          </li>
          <li>
            <aside>
              29
            </aside>
            <article>
              F3
            </article>
            <div />
          </li>
          <li>
            <aside>
              30
            </aside>
            <article>
              Gb3
            </article>
            <div />
          </li>
          <li>
            <aside>
              31
            </aside>
            <article>
              G3
            </article>
            <div />
          </li>
          <li>
            <aside>
              32
            </aside>
            <article>
              G#3
            </article>
            <div />
          </li>
          <li>
            <aside>
              33
            </aside>
            <article>
              A3
            </article>
            <div />
          </li>
          <li>
            <aside>
              34
            </aside>
            <article>
              A#3
            </article>
            <div />
          </li>
          <li>
            <aside>
              35
            </aside>
            <article>
              B3
            </article>
            <div />
          </li>
          <li>
            <aside>
              36
            </aside>
            <article>
              C4
            </article>
            <div />
          </li>
          <li>
            <aside>
              37
            </aside>
            <article>
              Db4
            </article>
            <div />
          </li>
          <li>
            <aside>
              38
            </aside>
            <article>
              D4
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li>
            <aside>
              39
            </aside>
            <article>
              G2
            </article>
            <div />
          </li>
          <li>
            <aside>
              40
            </aside>
            <article>
              G#2
            </article>
            <div />
          </li>
          <li>
            <aside>
              41
            </aside>
            <article>
              A2
            </article>
            <div />
          </li>
          <li>
            <aside>
              42
            </aside>
            <article>
              A#2
            </article>
            <div />
          </li>
          <li>
            <aside>
              43
            </aside>
            <article>
              B2
            </article>
            <div />
          </li>
          <li>
            <aside>
              44
            </aside>
            <article>
              C3
            </article>
            <div />
          </li>
          <li>
            <aside>
              45
            </aside>
            <article>
              C#3
            </article>
            <div />
          </li>
          <li>
            <aside>
              46
            </aside>
            <article>
              D3
            </article>
            <div />
          </li>
          <li>
            <aside>
              47
            </aside>
            <article>
              D#3
            </article>
            <div />
          </li>
          <li>
            <aside>
              48
            </aside>
            <article>
              E3
            </article>
            <div />
          </li>
          <li>
            <aside>
              49
            </aside>
            <article>
              F3
            </article>
            <div />
          </li>
          <li>
            <aside>
              50
            </aside>
            <article>
              Gb3
            </article>
            <div />
          </li>
          <li>
            <aside>
              51
            </aside>
            <article>
              G3
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li>
            <aside>
              52
            </aside>
            <article>
              C2
            </article>
            <div />
          </li>
          <li>
            <aside>
              53
            </aside>
            <article>
              C#2
            </article>
            <div />
          </li>
          <li>
            <aside>
              54
            </aside>
            <article>
              D2
            </article>
            <div />
          </li>
          <li>
            <aside>
              55
            </aside>
            <article>
              D#2
            </article>
            <div />
          </li>
          <li>
            <aside>
              56
            </aside>
            <article>
              E2
            </article>
            <div />
          </li>
          <li>
            <aside>
              57
            </aside>
            <article>
              F2
            </article>
            <div />
          </li>
          <li>
            <aside>
              58
            </aside>
            <article>
              F#2
            </article>
            <div />
          </li>
          <li>
            <aside>
              59
            </aside>
            <article>
              G2
            </article>
            <div />
          </li>
          <li>
            <aside>
              60
            </aside>
            <article>
              G#2
            </article>
            <div />
          </li>
          <li>
            <aside>
              61
            </aside>
            <article>
              A2
            </article>
            <div />
          </li>
          <li>
            <aside>
              62
            </aside>
            <article>
              A#2
            </article>
            <div />
          </li>
          <li>
            <aside>
              63
            </aside>
            <article>
              B2
            </article>
            <div />
          </li>
          <li>
            <aside>
              64
            </aside>
            <article>
              C3
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li>
            <aside>
              65
            </aside>
            <article>
              F1
            </article>
            <div />
          </li>
          <li>
            <aside>
              66
            </aside>
            <article>
              F#1
            </article>
            <div />
          </li>
          <li>
            <aside>
              67
            </aside>
            <article>
              G1
            </article>
            <div />
          </li>
          <li>
            <aside>
              68
            </aside>
            <article>
              G#1
            </article>
            <div />
          </li>
          <li>
            <aside>
              69
            </aside>
            <article>
              A1
            </article>
            <div />
          </li>
          <li>
            <aside>
              70
            </aside>
            <article>
              A#1
            </article>
            <div />
          </li>
          <li>
            <aside>
              71
            </aside>
            <article>
              B1
            </article>
            <div />
          </li>
          <li>
            <aside>
              72
            </aside>
            <article>
              C2
            </article>
            <div />
          </li>
          <li>
            <aside>
              73
            </aside>
            <article>
              C#2
            </article>
            <div />
          </li>
          <li>
            <aside>
              74
            </aside>
            <article>
              D2
            </article>
            <div />
          </li>
          <li>
            <aside>
              75
            </aside>
            <article>
              D#2
            </article>
            <div />
          </li>
          <li>
            <aside>
              76
            </aside>
            <article>
              E2
            </article>
            <div />
          </li>
          <li>
            <aside>
              77
            </aside>
            <article>
              F2
            </article>
            <div />
          </li>
        </ol>
      </li>
    </ol>
  </main>,
]
`;

exports[`renders correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,12 +7,15 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : "
`;

exports[`renders correctly 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,22 +7,28 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid chord
+       </span>
      </label>
    </form>,
    <main>
      <ol>
        <li>"
`;

exports[`renders correctly 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,21 +7,24 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"\\"
+         value=\\"G3\\"
        />
      </label>
    </form>,
    <main>
      <ol>"
`;
